--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
@@ -25,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-js": "react-scripts start",
-    "start": "react-scripts start",
+    "start": "PORT=8000 react-scripts start",
     "build": "react-scripts build"
   },
   "eslintConfig": {
